# rp2350_sd_bootloader

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  app.ld  elf.h  hw_config.c  main.c
